# Instructional-Video-Auto-Translation-System

./: .env.example  .gitignore  CONTRIBUTING.md  COST_FREE_GUIDE.md  COST_FREE_GUIDE_EN.md  LICENSE  MEDICAL_OPTIMIZATION.md  MEDICAL_TERMS.md  MEDICAL_TERMS_EN.md  QUICKSTART.md  QUICKSTART_EN.md  README.md  README_EN.md  SECURITY.md  SETUP_COMPLETE.md  UV_GUIDE.md  UV_GUIDE_EN.md  batch_process.py  config.py  diff.patch  execution_trace.md  main.py  plan.md  pyproject.toml  requirements.txt  run.ps1  run_uv.bat  run_uv.ps1  test_medical_terms.py  test_setup.py
modules/: __init__.py  asr.py  subtitle_cleaner.py  translator.py  tts.py  video_assembler.py
scripts/: align_audio.py  auto_xtts_pipeline.py  calc_duration.py  check_missing.py  debug_xtts.py  debug_xtts_v2.py  deep_debug_transformers.py  extract_ref_audio.py  generate_tts.py  merge_short_srt.py  merge_zh_srt.py  polish_en_srt.py  proofread_subs.py  refine_en_srt.py  translate_subs.py
